--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "NodeRace",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "author": {
     "name": "AMistry",
     "email": ""
